Stop horizontal scrolling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,9 +7,12 @@ html {
 }
 
 body {
-	min-height: 100vh;
-	position: relative;
 	margin: 0;
+	padding: 0;
+	position: relative;
+	min-height: 100vh;
+	max-width: 100%;
+	overflow-x: hidden;
 	font-family: 'Lato', sans-serif;
 }
 
